--- a/global/prometheus-alertmanager/values.yaml
+++ b/global/prometheus-alertmanager/values.yaml
@@ -27,7 +27,17 @@ cluster:
 slack:
   webhook_url: DEFINED-IN-SECRETS
   # incoming webhooks in slack apps are bound to one channel
+  # critucal
+  api_critical_webhook_url: DEFINED-IN-SECRETS
   metal_critical_webhook_url: DEFINED-IN-SECRETS
+  network_critical_webhook_url: DEFINED-IN-SECRETS
+  vmware_critical_webhook_url: DEFINED-IN-SECRETS
+  # warning
+  api_warning_webhook_url: DEFINED-IN-SECRETS
+  metal_warning_webhook_url: DEFINED-IN-SECRETS
+  network_warning_webhook_url: DEFINED-IN-SECRETS
+  vmware_warning_webhook_url: DEFINED-IN-SECRETS
+  # 
   openstack_critical_webhook_url: DEFINED-IN-SECRETS
   kubernetes_critical_webhook_url: DEFINED-IN-SECRETS
   kubernikus_critical_webhook_url: DEFINED-IN-SECRETS
