--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -104,6 +104,19 @@ cisco_ucsm_bm:
     physical_network: DEFINED-IN-REGION-CHART
     vnic_paths: DEFINED-IN-REGION-CHART
 
+drivers:
+  nsxv3:
+    defaults:
+      AGENT:
+        sync_pool_size: 10
+        db_max_records_per_query: 2000
+      NSXV3:
+        nsxv3_connection_retry_count: 10
+        nsxv3_connection_retry_sleep: 5
+        nsxv3_login_port: 443
+        nsxv3_transport_zone_name: openstack-tz
+        nsxv3_suppress_ssl_wornings: True
+        nsxv3_max_records_per_query: 2000
 
 logging:
     formatters:
