[manila] make memcached and pgmetrics req optional
for a minimal dev env both can be disabled

--- a/openstack/manila/requirements.yaml
+++ b/openstack/manila/requirements.yaml
@@ -3,6 +3,7 @@ dependencies:
     repository: file://../../common/postgresql
     version: 0.3.0
   - name: pgmetrics
+    condition: pgmetrics.enabled
     repository: file://../../common/pgmetrics
     version: 0.1.0
   - name: rabbitmq
@@ -12,6 +13,7 @@ dependencies:
     repository: file://../../openstack/utils
     version: 0.1.1
   - name: memcached
+    condition: memcached.enabled
     repository: file://../../common/memcached
     version: 0.0.1
   - name: rabbitmq
