--- a/openstack/manila/values.yaml
+++ b/openstack/manila/values.yaml
@@ -69,6 +69,7 @@ logging:
       level: INFO
 
 memcached:
+  enabled: true
   metrics:
     enabled: true
 
@@ -100,6 +101,7 @@ nanny:
     interval: 240
 
 pgmetrics:
+  enabled: true
   customMetrics:
     openstack_manila_share_servers:
       query: "SELECT host, share_network_id, status, COUNT(*) AS count_gauge FROM share_servers GROUP BY host, share_network_id, status"
