Preparations for fernetrouter debug pod against memcached

--- a/openstack/ironic/values.yaml
+++ b/openstack/ironic/values.yaml
@@ -15,7 +15,7 @@ global:
   pgbouncer:
     enabled: true
   fernetRouter:
-    imageVersion: 'latest'
+    image: 'latest'
 
 osprofiler:
     enabled: false
