Use statsd_exporter v0.8.1 and set the default timer_type to 'histogram'. The default timer type 'summary' has proven to be of no use.

--- a/openstack/backup-replication/templates/statsd-deployment.yaml
+++ b/openstack/backup-replication/templates/statsd-deployment.yaml
@@ -27,7 +27,7 @@ spec:
       containers:
       - name: statsd
         image: prom/statsd-exporter:{{ .Values.statsd.exporter_image_version }}
-        args: [ -statsd.mapping-config=/etc/statsd/statsd-exporter.yaml ]
+        args: [ --statsd.mapping-config=/etc/statsd/statsd-exporter.yaml ]
         ports:
           - name: statsd
             containerPort: 9125
