--- a/openstack/keystone/templates/deployment-api.yaml
+++ b/openstack/keystone/templates/deployment-api.yaml
@@ -198,11 +198,11 @@ spec:
           imagePullPolicy: {{ .Values.api.metrics.imagePullPolicy | default "IfNotPresent" | quote }}
           command:
             - /bin/statsd_exporter
-            - --statsd.mapping-config=/tmp/statsd_mapping.yml
+            - --statsd.mapping-config=/etc/statsd/statsd-exporter.yaml
           volumeMounts:
             - name: keystone-etc
-              mountPath: /tmp/statsd_mapping.yml
-              subPath: statsd_exporter_mapping.yaml
+              mountPath: /etc/statsd/statsd-exporter.yaml
+              subPath: statsd-exporter.yaml
               readOnly: true
           ports:
             - name: statsd
