--- a/openstack/glance/templates/etc-configmap.yaml
+++ b/openstack/glance/templates/etc-configmap.yaml
@@ -42,3 +42,12 @@ data:
   watcher.yaml: |
 {{ include (print .Template.BasePath "/etc/_watcher.yaml.tpl") . | indent 4 }}
 {{- end }}
+{{- if .Values.metrics.enabled }}
+  statsd-exporter.yaml: |
+    defaults:
+      timer_type: histogram
+      buckets: [.025, .1, .25, 1, 2.5]
+      match_type: glob
+      glob_disable_ordering: false
+      ttl: 0 # metrics do not expire
+{{- end }}
