--- a/openstack/nova/templates/etc-configmap.yaml
+++ b/openstack/nova/templates/etc-configmap.yaml
@@ -52,3 +52,10 @@ data:
   nova-cell2.conf: |
 {{ include (print .Template.BasePath "/etc/_nova-cell2.conf.tpl") . | indent 4 }}
 {{- end }}
+  statsd-exporter.yaml: |
+    defaults:
+      timer_type: histogram
+      buckets: [.025, .1, .25, 1, 2.5]
+      match_type: glob
+      glob_disable_ordering: false
+      ttl: 0 # metrics do not expire
