--- a/openstack/swift/etc/statsd-exporter.yaml
+++ b/openstack/swift/etc/statsd-exporter.yaml
@@ -3,6 +3,13 @@
 # Reference for this file's format:
 # <https://github.com/prometheus/statsd_exporter#metric-mapping-and-configuration>
 
+defaults:
+  timer_type: histogram
+  buckets: [.025, .1, .25, 1, 2.5]
+  match_type: glob
+  glob_disable_ordering: false
+  ttl: 0 # metrics do not expire
+
 mappings:
 
   ##############################################################################
