federate snmp_f5_* metrics as well

--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -155,6 +155,7 @@ data:
           - '{__name__=~"^security_group_(max|total)_entanglement$"}'
           - '{__name__=~"^skydns_.+"}'
           - '{__name__=~"^snmp_asr_.+"}'
+          - '{__name__=~"^snmp_f5_.+"}'
           - '{__name__=~"^sql_openstack_.+"}'
           - '{__name__=~"^mysql_global_status_.+"}'
           - '{__name__=~"^mysql_global_variables_.+"}'
