--- a/openstack/maia/files/snmp-exporter/asr-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/asr-generator.yaml
@@ -12,3 +12,6 @@ modules:
       - 1.3.6.1.4.1.9.10.77.1.2.1
       - 1.3.6.1.2.1.123.1.5
       - 1.3.6.1.2.1.123.1.7
+      - ifDescr
+      - ifAdminStatus
+      - ifOperStatus
