--- a/openstack/elk/templates/logstash-service.yaml
+++ b/openstack/elk/templates/logstash-service.yaml
@@ -2,16 +2,20 @@ apiVersion: v1
 kind: Service
 
 metadata:
-  name: logstash-netflow
+  name: logstash-external
   annotations:
     parrot.sap.cc/announce: 'true'
 
 spec:
   selector:
-    component: logstash-netflow
+    component: logstash-external
   ports:
     - name: netflow
       protocol: UDP
-      port: {{.Values.elk_logstash_input_udp_port}}
-      targetPort: {{.Values.elk_logstash_input_udp_port}}
+      port: {{.Values.elk_logstash_input_netflow_port}}
+      targetPort: {{.Values.elk_logstash_input_netflow_port}}
+    - name: syslog
+      protocol: UDP
+      port: {{.Values.elk_logstash_input_syslog_port}}
+      targetPort: {{.Values.elk_logstash_input_syslog_port}}
   externalIPs: ["{{.Values.elk_logstash_external_ip}}"]
