--- a/openstack/grafana/values.yaml
+++ b/openstack/grafana/values.yaml
@@ -10,7 +10,7 @@ namespace: '@/cc/secrets'
 service:
   name: grafana
   type: ClusterIP
-#  externalPort: 3000
+  externalPort: 3000
   internalPort: 3000
 #resources:
 #  limits:
@@ -48,9 +48,6 @@ persistence:
 ingress:
   enabled: false
 
-service:
-  externalPort: 3000
-
 elasticsearch:
   # version may be overridden to 5 in some landscapes
   version: 5
@@ -79,6 +76,7 @@ grafana:
     ssl_mode: disable
   role:
     viewer: 'monitoring_viewer'
+    editor: 'monitoring_editor'
     admin: 'monitoring_admin'
   aes:
     key: '@/cc/secrets'
