[swift] memcached-deplyoement improvements
* Increased the max number of connections to 16384
* Change ImagePullPolicy to IfNotPresent

//cc @majewsky

--- a/openstack/swift/templates/memcached-tokens-deployment.yaml
+++ b/openstack/swift/templates/memcached-tokens-deployment.yaml
@@ -24,11 +24,10 @@ spec:
       containers:
         - name: memcached
           image: memcached:{{.Values.image_version_auxiliary_memcached}}
-          imagePullPolicy: Always
           ports:
             - name: memcached
               containerPort: 11211
-          command: ["memcached", "-m", "1024"]
+          command: ["memcached", "-m", "1024", "-c", "16384"]
         - name: metrics
           image: prom/memcached-exporter:{{.Values.image_version_auxiliary_memcached_exporter}}
           ports:
