fix logstash udp config

--- a/openstack/elk/templates/logstash-etc-configmap.yaml
+++ b/openstack/elk/templates/logstash-etc-configmap.yaml
@@ -15,3 +15,5 @@ data:
 {{ include "elk/templates/etc/_netflow.json.tpl" . | indent 4 }}
   logstash.yml: |
 {{ include "elk/templates/etc/_logstash.yml.tpl" . | indent 4 }}
+  syslog.json: |
+{{ include "elk/templates/etc/_syslog.json.tpl" . | indent 4 }}
