--- a/system/unbound/values.yaml
+++ b/system/unbound/values.yaml
@@ -1,5 +1,5 @@
 unbound:
-  image_unbound: sapcc/unbound2
+  image_unbound: sapcc/unbound
   image_unbound_exporter: sapcc/unbound_exporter
   image_unbound_tag: latest 
   image_unbound_exporter_tag: latest 
