[ironic] Fix default source for fernet-router

--- a/openstack/ironic/values.yaml
+++ b/openstack/ironic/values.yaml
@@ -15,7 +15,7 @@ global:
   pgbouncer:
     enabled: true
   fernetRouter:
-    image: 'latest'
+    image: "monsoon/fernet-router:latest"
 
 osprofiler:
     enabled: false
