Added requests and limits for vcenter exporter

--- a/openstack/vcenter-utilities/templates/vcenter_datacenter_exporter_deployment.yaml
+++ b/openstack/vcenter-utilities/templates/vcenter_datacenter_exporter_deployment.yaml
@@ -49,6 +49,13 @@ template: |
               - /maia-etc/config-{{ name }}-`}}{{ $exporter_type_values.name }}{{`.yaml
               - -t
               - `}}{{ $exporter_type_values.name }}{{`
+            `}}{{- if $global_values.vcenter_exporter.resources.enabled }}{{`
+            resources:
+              requests:
+                memory: `}}{{ $global_values.vcenter_exporter.resources.requests.memory | quote }}{{`
+              limits:
+                memory: `}}{{ $global_values.vcenter_exporter.resources.limits.memory | quote }}{{`
+            `}}{{- end }}{{`
             volumeMounts:
               - mountPath: /maia-etc
                 name: maia-etc
