--- a/system/kube-monitoring/charts/cloudprober-exporter/templates/service.yaml
+++ b/system/kube-monitoring/charts/cloudprober-exporter/templates/service.yaml
@@ -10,6 +10,9 @@ metadata:
   labels:
     app: cloudprober-exporter
     release: "{{$.Release.Name}}"
+  annotations:
+    "prometheus.io/scrape": "true"
+    "prometheus.io/port": "9313"
 
 spec:
   selector:
@@ -29,6 +32,10 @@ spec:
       protocol: TCP
       port: 5201
       targetPort: 5201
+    - name: cloudprober
+      protocol: TCP
+      port: 9313
+      targetPort: 9313
 ---
 {{ end -}}
 {{ end -}}
