use raw sockets for ping probe

--- a/system/kube-monitoring/charts/cloudprober-exporter/templates/config.yaml
+++ b/system/kube-monitoring/charts/cloudprober-exporter/templates/config.yaml
@@ -19,7 +19,7 @@ data:
         host_names: "{{ . }}"
       }
       ping_probe {
-        use_datagram_socket: true
+        use_datagram_socket: false
       }
     }
     {{- end }}
