fix hub url for logstash elk

--- a/openstack/elk/templates/logstash-deployment.yaml
+++ b/openstack/elk/templates/logstash-deployment.yaml
@@ -30,7 +30,7 @@ spec:
             name: logstash-etc
       containers:
         - name: logstash-external
-          image: hub.global/cloud.sap/monsoon/elk-logstash:{{.Values.elk_image_version_logstash}}
+          image: hub.global.cloud.sap/monsoon/elk-logstash:{{.Values.elk_image_version_logstash}}
           imagePullPolicy: IfNotPresent
           ports:
             - name: netflow
